[package]
name = "vampire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
clap = { version = "4.0.18", features = ["derive"] }
aws-config = "0.51.0"
aws-sdk-ssm = "0.21.0"
tokio = { version = "1.20.1", features = ["full"] }
colored = "2.0.0"
